Version 1.8.5+svn:
 * Language and i18n:
   * Updated translations: Indonesian, Japanese, Portuguese (Brazil)

Version 1.8.5:
 * AI:
   * Fixed bug #16406: Fixed broken AI of SoF 1, and improved upgrade procedure
     for old-style AI config.
   * Fixed bug #16585: made AI move in targeting phase even if for some of the
     'best' units moves to targets are impossible
 * Campaigns:
   * Descent into Darkness:
     * Made 'Alone at Last' easier.
   * Legend of Wesmere:
     * Added another keep in scenario 14.
 * Editor:
   * Added a standard click sound for brush bar buttons (bug #15635)
 * Graphics
   * Updated portraits for Drake Fighter and Burner
 * Language and i18n:
   * Updates fonts: DejaVu 2.32
   * Updated translations: Chinese (Simplified), Chinese (Traditional), Czech,
     Dutch, Estonian, French, Galician, German, Hungarian, Indonesian, Japanese,
     Lithuanian, Polish, Russian, Serbian, Slovak, Vietnamese
 * User interface:
   * Fixed bug #16653: Avoid markup when calculating the text length for
     ellipse text (Debian bug #547476).
   * Fix bug #15960 "again", making "Cancel" a separate action and not just
     a duplicate of "OK."
   * Fix crash when doing teleport+attack to a fogged village

Version 1.8.4:
 * AI:
   * Fixed bug #16102: Made AI cancel attacks if a previously valid attack
     was made invalid by WML event after move in move+attack sequence.
   * Allowed custom eras to define Lua AI modifications for games played with
     this era.
 * Campaigns:
   * Delfadors Memoirs:
     * Fixed bug #16295: Make Lionel's portrait in Delfador's Memoirs story
       screens the same as his unit portrait since there doesn't seem to be a
       current higher-res version available
   * Descent into Darkness:
     * Made 'Alone at Last' slightly easier. Also, Dela is no longer
       invulnerable but cannot be assassinated easily.
   * Legend of Wesmere:
     * Fixed bug #16140: removed gold overlay when defeating both leaders