@@ -1,6 +1,8 @@
 Version 1.8.5+svn:
  * Language and i18n:
    * Updated translations: Indonesian, Japanese, Portuguese (Brazil)
+ * Miscellaneous and bug fixes:
+   * Fixed: properly update cmake revision numbers (bug #16483)
 
 Version 1.8.5:
  * AI:
